--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="right-header">
           <h1 class="name">
             Hi, I'm <span>Sam Pazouki Varooneh.</span>
-            A Fron-End Developer.
+            A Front-End Developer.
           </h1>
           <br />
           <div class="btn-con">
@@ -53,17 +53,11 @@
           <div class="left-about">
             <h4>About me</h4>
             <p>
-              I'm Sam Pazouki Varooneh,student at UniSENAI/Florianoplis Superior
-              Technology Course in Systems Analysis and Development and studied
-              English for 2 years. In 2020 started to learn developing in 2021
-              technologies like HTML, CSS, Sass, JavaScript, Bootstrap 5,
-              Angular (Js, 2+), React, React Native. I enrolled at SENAI
-              (Florianópolis) in the graduation course, Superior Technology
-              Course in Systems Analysis and Development, the course started in
-              July 2021 and will end in 2023. I have about 1 year of
-              professional experience, I worked with technologies such as HTML5,
-              CSS 3, Sass, Boostrap 5, JavaScript, Angular (Js, 2+), React, Vue
-              Js, Java, PHP, WordPress, MySQL, Oracle.
+              My name is Sam Pazouki Varooneh, student at UniSENAI/Florianoplis in
+              Superior Technology Course in Systems Analysis and Development and
+              studied English for 2 years. I use tools like HTML5, CSS3, Sass, JavaScript, Bootstrap
+              5, Angular (Js, 2+), React, React Native.I worked with technologies such as HTML5, CSS3, Sass,
+              Boostrap 5, JavaScript, Typescript, Angular(Js, 2+), React, Java, PHP, WordPress, MySQL, API, Oracle.
               <br />
               <br />
             </p>
@@ -77,16 +71,16 @@
           <div class="right-about">
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">100+</p>
+                <p class="large-text">100%</p>
                 <p class="small-text">
-                  Projects <br />
-                  Completed
+                  Implemented pages with  <br />
+                  Responsive layout
                 </p>
               </div>
             </div>
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">1</p>
+                <p class="large-text">3</p>
                 <p class="small-text">
                   Years of <br />
                   experience
@@ -95,19 +89,19 @@
             </div>
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">100+</p>
+                <p class="large-text">100%</p>
                 <p class="small-text">
-                  Happy <br />
-                  Clients
+                  Angular <br />
+                  Migration
                 </p>
               </div>
             </div>
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">100+</p>
+                <p class="large-text">100%</p>
                 <p class="small-text">
-                  Customer <br />
-                  reviews
+                  Experience in semantics and  <br />
+                  Web development
                 </p>
               </div>
             </div>
@@ -178,26 +172,26 @@
             <div class="tl-icon">
               <i class="fas fa-briefcase"></i>
             </div>
-            <p class="tl-duration">(December 2021-April 2022)</p>
+            <p class="tl-duration">(Dec 2021 - Apr 2022)</p>
             <h5>Front-End Developer<span> - JExperts</span></h5>
             <p>
               -Technologies: SCSS, HTML, Bootstrap 5, Typescript, Angular
               (JS,12), Java, Oracle, REST API Angular Migration, Bootstrap 5.
               <br />
-              -Activities: Analyze datas, Tests in a homologation environment
+              -Activities: Angular Migration, Data Analysis, Tests in a homologation environment
             </p>
           </div>
           <div class="timeline-item">
             <div class="tl-icon">
               <i class="fas fa-briefcase"></i>
             </div>
-            <p class="tl-duration">(August 2021-November 2021)</p>
+            <p class="tl-duration">(Aug 2021 - Dec 2021)</p>
             <h5>Front-End Developer<span> - SOA TECHNOLOGY</span></h5>
             <p>
-              -Tecnologis: SCSS, HTML, Bootstrap 5,Typescript, Angular (JS,12),
-              Java, MySQL, React, PHP, WordPres, API REST, Postman.
+              -Technologies: SCSS, HTML, Bootstrap 5,Typescript, Angular
+              (JS,12), Java, MySQL, React, PHP, WordPres, API REST, Postman.
               <br />
-              -Activities: Angular Migration, Bootstrap 5, Analyze datas, Tests
+              -Activities: Angular Migration, Data Analysis, Tests
               in a homologation environment.
             </p>
           </div>
@@ -205,13 +199,11 @@
             <div class="tl-icon">
               <i class="fas fa-briefcase"></i>
             </div>
-            <p class="tl-duration">(February 2015-June 2015)</p>
-            <h5>Assistant network and computer<span> - Post Office</span></h5>
+            <p class="tl-duration">(Feb 2014 - Nov 2016)</p>
+            <h5>Front-End Developer<span> - Post Office</span></h5>
             <p>
-              Tecnologies: HTML, CSS, CISCO, Windows 8, Network +
+              -Technologies: HTML, CSS, Javascript, Wordpress, Windows 8.
               <br />
-              -Activities: Check computers and network installations every day
-              and connection between computers, and check website of the office.
             </p>
           </div>
         </div>
@@ -348,35 +340,18 @@
               </div>
             </div>
           </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port7.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="container" id="blogs">
+      <!--<section class="container" id="blogs">
         <div class="blogs-content">
           <div class="main-title">
             <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
           </div>
           <div class="blogs">
             <div class="blog">
-              <img src="img/port6.jpg" alt="" />
+              <img src="img/" alt="" />
               <div class="blog-text">
                 <h4>How to Create Your Own Website</h4>
                 <p>
@@ -386,7 +361,7 @@
               </div>
             </div>
             <div class="blog">
-              <img src="img/blog1.jpg" alt="" />
+              <img src="img/" alt="" />
               <div class="blog-text">
                 <h4>How to Become an Expert in Web Design</h4>
                 <p>
@@ -396,7 +371,7 @@
               </div>
             </div>
             <div class="blog">
-              <img src="img/blog2.jpg" alt="" />
+              <img src="img/" alt="" />
               <div class="blog-text">
                 <h4>Become a Web Designer in 10 Days</h4>
                 <p>
@@ -406,7 +381,7 @@
               </div>
             </div>
             <div class="blog">
-              <img src="img/blog3.jpg" alt="" />
+              <img src="img/" alt="" />
               <div class="blog-text">
                 <h4>Debbuging made easy with Web Inspector</h4>
                 <p>
@@ -416,7 +391,7 @@
               </div>
             </div>
             <div class="blog">
-              <img src="img/port1.jpg" alt="" />
+              <img src="img/" alt="" />
               <div class="blog-text">
                 <h4>Get started with Web Design and UI Design</h4>
                 <p>
@@ -426,14 +401,14 @@
               </div>
             </div>
             <div class="blog">
-              <img src="img/port3.jpg" alt="" />
+              <img src="img/" alt="" />
               <div class="blog-text">
                 <h4>This is what you need to know about Web Design</h4>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Doloribus natus voluptas, eos obcaecati recusandae amet?
                 </p>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
@@ -486,7 +461,7 @@
                     <span>Languages</span>
                   </div>
                   <p>
-                    <span>English, Portugue, Persian, Turkish</span>
+                    <span>English, Portuguese, Persian, Turkish</span>
                   </p>
                 </div>
               </div>
@@ -553,9 +528,9 @@
       <div class="control" data-id="portfolio">
         <i class="fas fa-briefcase"></i>
       </div>
-      <div class="control" data-id="blogs">
+      <!--<div class="control" data-id="blogs">
         <i class="far fa-newspaper"></i>
-      </div>
+      </div>-->
       <div class="control" data-id="contact">
         <i class="fas fa-envelope-open"></i>
       </div>
